<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.Material3.Light.NoActionBar"
    android:background="#fff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/put_url"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/put_name"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.jhonkk.common.view.ProfilePicView
            android:id="@+id/profile_pic_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <FrameLayout
            android:id="@+id/container_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</RelativeLayout>