<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/content"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        app:strokeWidth="0dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="0dp">

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_placeholder"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:visibility="gone"/>

        <FrameLayout
            android:id="@+id/loading_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent_white"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

        </FrameLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>